# nlpo_toolkit

./: .dockerignore  .gitignore  Dockerfile  README.md  count_corpus_vocabula_local.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  utils.py
cleaned/: satyricon_cena_27_78.cleaned.txt  satyricon_lat2.cleaned.txt
config/: cleaner.yml  exclude_lemmas.txt  groups.config.schema.json  groups.config.yml  lemma_normalize.tsv  ref_tags.txt  roman_numeral_exceptions.txt
config/latin_cleaners/: lexicon_map.tsv  subst_patterns.yml
data/wordlist/: latin_words.txt
input/: satyricon_non_cena_27_78.txt
nlpo_toolkit/: __init__.py  cleaner_contracts.py  config_model.py  immutable_collections.py  interfaces.py  models.py  nlp.py
nlpo_toolkit/backends/: __init__.py  factory.py  stanza_backend.py  transformers_backend.py
nlpo_toolkit/compare/: __init__.py  core.py
nlpo_toolkit/comparison/: __init__.py  cli_service.py  config.py  configured.py  engine.py  errors.py  frequency_io.py  metrics.py  models.py  results.py  writers.py
nlpo_toolkit/configuration/: __init__.py  yaml_loader.py
nlpo_toolkit/corpus_analysis/: analysis_cache.py  analysis_cache_results.py  analysis_cache_stats.py  analysis_execution.py  analysis_orchestration.py  analysis_outputs.py  analysis_pipeline.py  analysis_policy.py  analysis_records.py  analysis_results.py  archive.py  archive_types.py  cache.py  cache_storage.py  cleaner_runtime.py  cli.py  comparison.py  comparison_run_results.py  composition.py  concordance.py  config.py  config_references.py  corpus.py  corpus_errors.py  count_command.py  count_context.py  count_result.py  count_result_builder.py  counters.py  dependencies.py  diagnostic_trace.py  dictcheck.py  dry_run.py  execution_session.py  features.py  io_utils.py  lemma_cache.py  ngram.py  normalizer.py  outputs.py  (+19 more)
scripts/: generate_config_schema.py
tests/: test_deep_immutability.py  test_latin_cleaners_lexicon_map.py  test_latin_vocab_pipeline.py  test_serialization_types.py  test_stanza_integration.py  test_trace_offsets.py  test_yaml_loader.py
(+515 files in other folders)
