[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpo_toolkit"
version = "0.1.0"
description = "Toolkit for NLP and corpus processing"
authors = [{name="Yuki Nishimuta"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "stanza>=1.9,<1.10",
    "PyYAML>=6.0",
]

[project.scripts]
nlpo = "nlpo_toolkit.corpus_analysis.cli:main"

[project.optional-dependencies]
dev = ["build", "pytest", "ruff"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nlpo_toolkit*"]

[tool.setuptools.package-data]
nlpo_toolkit = ["**/*.yml", "**/*.yaml", "**/*.txt", "**/*.tsv"]

[tool.pytest.ini_options]
addopts = '-m "not stanza_integration"'
markers = ["stanza_integration: tests that require real stanza models (optional)"]
